--- a/404.html
+++ b/404.html
@@ -3,21 +3,18 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
+  .404-board {
     text-align: center;
   }
-  h1 {
+  
+  .404-board > h1 {
     font-size: 4rem;
-    
-    margin: 30px 0;
-    line-height: 1;
-    letter-spacing: -1px;
+    letter-spacing: -0.1rem;
+    margin: 2rem auto;
   }
 </style>
 
-<div class="container">
+<div class="404-board">
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
