--- a/404.html
+++ b/404.html
@@ -3,18 +3,18 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .404-board {
+  .single-board {
     text-align: center;
   }
   
-  .404-board > h1 {
+  .single-board > h1 {
     font-size: 4rem;
     letter-spacing: -0.1rem;
-    margin: 2rem auto;
+    margin: 1rem auto;
   }
 </style>
 
-<div class="404-board">
+<div class="single-board">
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
