--- a/404.html
+++ b/404.html
@@ -1,21 +1,27 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
 
-<style type="text/css" media="screen">
-  .single-board {
-    text-align: center;
-  }
-  
-  .single-board > h1 {
-    font-size: 4rem;
-    letter-spacing: -0.1rem;
-    margin: 1rem auto;
-  }
-</style>
+  <body>
 
-<div class="single-board">
-  <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+    <style type="text/css" media="screen">
+      .single-board {
+        text-align: center;
+      }
+
+      .single-board > h1 {
+        font-size: 4rem;
+        letter-spacing: -0.1rem;
+        margin: 1rem auto;
+      }
+    </style>
+
+    <div class="single-board">
+      <h1>404</h1>
+      <p><strong>Page not found :(</strong></p>
+      <p>The requested page could not be found.</p>
+    </div>
+
+  </body>
+
+</html>
+
